# fly-template.hs

./: README.org  Serve.hs  default.nix  docker.nix  fly.toml  nixpkgs.nix  serve.cabal  shell.nix
.github/workflows/: deploy.yml
static/: index.html
